--- a/apps/client/styles/globals.css
+++ b/apps/client/styles/globals.css
@@ -61,6 +61,8 @@
 
   input[type='search'],
   input[type='text'],
+  input[type='email'],
+  input[type='password'],
   input[type='time'],
   input[type='datetime-local'] {
     @apply appearance-none rounded-custom bg-light-elevation outline-none focus:ring-2 focus:ring-accent dark:bg-dark-elevation;
