--- a/apps/client/styles/globals.css
+++ b/apps/client/styles/globals.css
@@ -31,12 +31,9 @@
     @apply font-semibold;
   }
 
-  h1 {
-    @apply text-4xl;
-  }
-
+  h1,
   h2 {
-    @apply text-3xl;
+    @apply text-2xl;
   }
 
   img {
